src/styles.css
/* You can add global styles to this file, and also import other style files */

html,
body {
    height: 100%;
}
body {
    margin: 0;
    font-family: Roboto, 'Helvetica Neue', sans-serif;
}

.info-snackbar div {
    background: blue !important;
    color: white;
}

.info-snackbar button {
    background-color: blue;
    color: white !important;
    border: none;
}

.success-snackbar div {
    background: green !important;
    color: white;
}

.success-snackbar button {
    background-color: green;
    color: white !important;
    border: none;
}

.error-snackbar div {
    background: red !important;
    color: white;
}

.error-snackbar button {
    background-color: red;
    color: white !important;
    border: none;
}

.loader-container {
    position: relative;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    min-height: 200px;
    max-height: 400px;
    overflow: auto;
    background: rgba(0, 0, 0, 0.15);
    height: 30vh;
    border-radius: 10px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.tablesTemplate {
    justify-content: center;
    align-items: center;
    border-radius: 10px;
    padding: 3%;
}

.tablesTemplateBox {
    width: 80%;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    clear: both;
}

@media screen and (max-width: 700px) {
    .tablesTemplateBox {
        width: 100%;
        margin: 0;
        display: flex;
        clear: both;
    }

    .tablesTemplate {
        padding: 1%;
    }

    .onPhone {
        display: none;
    }
}

.filterPanel {
    padding-top: 20px;
    width: 80%;
    display: flex;
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    justify-content: flex-end;
}

.paginator {
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    border-radius: 10px;
}

